color contrast fix

--- a/src/_assets/stylesheets/colors.css
+++ b/src/_assets/stylesheets/colors.css
@@ -1,12 +1,12 @@
 	:root {
 		/* globals */
-		--primary: rgba(6, 128, 121, 1) /* use tailwind color instead */
+		--primary: rgba(6, 128, 121, 1); /* use tailwind color instead */
 		--background: var(--color-gray-5);
 		--gradient: radial-gradient(109.5% 106.59% at 13.51% 90.18%, #FFF0A8 0%, #FFF9DB 33.33%, #ECF3EE 58.33%, #F4F2E8 81.77%, #F4CCA5 100%);
 
 
 		/* grays */
-		--color-gray-1: rgba(53, 50, 38, 1);
+		--color-gray-1: rgba(33, 31, 24, 1);
 		--color-gray-2: rgba(53, 50, 38, 0.85);
 		--color-gray-3: rgba(92, 90, 80, 0.85);
 		--color-gray-4: rgba(92, 90, 80, 0.25);
@@ -16,9 +16,9 @@
 		--light-teal: rgba(2, 174, 143, 1);
 
 		--scrimOnImg: var(--color-gray-5);
-		--scrimOnHover: var(--color-gray-4);
+		--scrimOnHover: var(--primary);
 
-		--border-primary: rgba(92, 90, 80, 0.85);
+		--border-primary: var(--primary);
 		/* text */
 		--text-color: var(--color-gray-1);
 		--text-color-link-active: var(--color-gray-1);
@@ -34,8 +34,10 @@
 		--primary: var(--light-teal);
     --background: var(--color-gray-1);
 
+		--color-gray-3: rgba(253, 252, 246, 0.85);
+
 		--scrimOnImg: var(--color-gray-1);
-		--scrimOnHover: var(--color-gray-2);
+		--scrimOnHover: var(--color-gray-5);
 
     --text-color: var(--color-gray-5);
 		--text-color-link-visited: var(--primary);
@@ -47,6 +49,10 @@
 html, body {
 	background-color: var(--background);
 	color: var(--text-color);
+}
+
+h1, h2, h3 {
+	color: var(--primary);
 }
 
 p > a[href] {
